doc: update examples and add tfds example

--- a/docs/source/example/atari_pong.ipynb
+++ b/docs/source/example/atari_pong.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "from evox import workflows, algorithms, problems\n",
-    "from evox.monitors import StdSOMonitor\n",
+    "from evox.monitors import EvalMonitor\n",
     "from evox.utils import TreeAndVector\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
@@ -78,7 +78,7 @@
     "model = PongPolicy()\n",
     "params = model.init(model_key, jnp.zeros((210, 160, 3)))\n",
     "adapter = TreeAndVector(params)\n",
-    "monitor = StdSOMonitor()\n",
+    "monitor = EvalMonitor()\n",
     "problem = problems.neuroevolution.Gym(\n",
     "    env_name=\"ALE/Pong-v5\",\n",
     "    env_options={\"full_action_space\": False},\n",
