--- a/docs/source/example/custom_algorithm_and_problem.ipynb
+++ b/docs/source/example/custom_algorithm_and_problem.ipynb
@@ -123,7 +123,7 @@
     "    flip_prob=0.1,\n",
     ")\n",
     "problem = OneMax()\n",
-    "monitor = monitors.StdSOMonitor()"
+    "monitor = monitors.EvalMonitor()"
    ]
   },
   {
@@ -137,7 +137,6 @@
     "    algorithm,\n",
     "    problem,\n",
     "    monitors=[monitor],\n",
-    "    record_pop=True,\n",
     "    opt_direction=\"max\",\n",
     ")"
    ]
