--- a/docs/source/example/pso_ackley.ipynb
+++ b/docs/source/example/pso_ackley.ipynb
@@ -46,7 +46,7 @@
     "    pop_size=100,\n",
     ")\n",
     "problem = problems.numerical.Ackley()\n",
-    "monitor = monitors.StdSOMonitor()"
+    "monitor = monitors.EvalMonitor()"
    ]
   },
   {
@@ -60,7 +60,6 @@
     "    algorithm,\n",
     "    problem,\n",
     "    monitors=[monitor],\n",
-    "    record_pop=True,\n",
     ")"
    ]
   },
