fix: bug in the example

--- a/docs/source/example/gym_classic_control.ipynb
+++ b/docs/source/example/gym_classic_control.ipynb
@@ -117,6 +117,7 @@
     "    sol_transforms=[adapter.batched_to_tree],\n",
     "    monitors=[monitor],\n",
     "    opt_direction=\"max\"\n",
+    "    jit_problem=False,\n",
     ")"
    ]
   },
