doc: add document title for multidevice algorithm

--- a/docs/source/guide/experimental/multidevice_algorithm.ipynb
+++ b/docs/source/guide/experimental/multidevice_algorithm.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multidevice Algorithm\n",
+    "\n",
+    "This guide will show you how to write algorithms that can run on multiple devices (multiple GPUs) in EvoX."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
