doc: add explanation of the multidevice algorithm

--- a/docs/source/guide/experimental/multidevice_algorithm.ipynb
+++ b/docs/source/guide/experimental/multidevice_algorithm.ipynb
@@ -32,8 +32,8 @@
     "    Node1\n",
     "      |\n",
     " +----+----+\n",
-    " |    |    |\n",
-    "GPU  GPU  GPU\n",
+    " |         |\n",
+    "GPU       GPU\n",
     "```\n",
     "Where we only have one node with multiple GPUs. The communication between the GPUs is done through the PCIe or NVLink.\n",
     "When running in a distributed setup, we need to make decisions on how to place the data on these GPUs."
@@ -43,7 +43,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we use the vanilla PSO algorithm as an example. In PSO, each GPU can independently update the local information for its particles. On the other hand, updating the global information requires communication between GPUs, but this process can be handled rather efficiently using an all-reduce operation."
+    "Here, we use the vanilla PSO algorithm as an example. In PSO, each GPU can independently update the local information for its particles. On the other hand, updating the global information requires communication between GPUs, but this process can be handled rather efficiently using an all-reduce operation.\n",
+    "\n",
+    "Here is an illustration of population in PSO, it has two dimensions: the number of particles (population size) and the problem dimension.\n",
+    "```\n",
+    "  Problem Dimension\n",
+    "+-------------------+\n",
+    "|                   |\n",
+    "|  GPU 0            |  Population Size\n",
+    "|  All particles    |\n",
+    "|                   |\n",
+    "+-------------------+\n",
+    "```\n",
+    "After sharding it across the population dimension, we have the following:\n",
+    "```\n",
+    "  Problem Dimension\n",
+    "+-------------------+\n",
+    "|                   |\n",
+    "|  GPU 0            |  Population Size / 2\n",
+    "+-------------------+\n",
+    "|                   |\n",
+    "|  GPU 1            |  Population Size / 2\n",
+    "+-------------------+\n",
+    "```\n",
+    "Similarly, we can also shard the velocity variable.\n",
+    "This will reduce the memory usage on each GPU by half."
    ]
   },
   {
