--- a/docs/source/example/custom_algo_prob.ipynb
+++ b/docs/source/example/custom_algo_prob.ipynb
@@ -6,7 +6,28 @@
    "source": [
     "# Custom algorithm and problem\n",
     "In this notebook, we will show how to use the Algorithm and Problem classes to create a custom algorithm and problem. Here we give an example of **implementing a PSO algorithm that solves the Sphere problem**.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
     "\n",
+    "import torch\n",
+    "\n",
+    "from evox.core import Algorithm, Mutable, Parameter, Problem, jit_class\n",
+    "from evox.utils import clamp\n",
+    "from evox.workflows import EvalMonitor, StdWorkflow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Algorithm example: PSO algorithm\n",
     "\n",
     "Particle Swarm Optimization (PSO) is a population-based metaheuristic algorithm inspired by the social behavior of birds and fish. It is widely used for solving continuous and discrete optimization problems.\n",
@@ -16,16 +37,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "from typing import List\n",
-    "\n",
-    "from evox.utils import clamp\n",
-    "from evox.core import Parameter, Mutable, Algorithm, jit_class\n",
-    "\n",
     "@jit_class\n",
     "class PSO(Algorithm):\n",
     "    #Initialize the PSO algorithm with the given parameters.\n",
@@ -68,7 +83,7 @@
     "    def step(self):\n",
     "        # Compute fitness\n",
     "        fitness = self.evaluate(self.population)\n",
-    "        \n",
+    "\n",
     "        # Update the lbest and the gbest\n",
     "        compare = self.local_best_fitness - fitness\n",
     "        self.local_best_location = torch.where(\n",
@@ -79,7 +94,7 @@
     "            [self.global_best_location.unsqueeze(0), self.population],\n",
     "            [self.global_best_fitness.unsqueeze(0), fitness],\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        # Update the velocity\n",
     "        rg = torch.rand(self.pop_size, self.dim, dtype=fitness.dtype, device=fitness.device)\n",
     "        rp = torch.rand(self.pop_size, self.dim, dtype=fitness.dtype, device=fitness.device)\n",
@@ -88,12 +103,12 @@
     "            + self.phi_p * rp * (self.local_best_location - self.population)\n",
     "            + self.phi_g * rg * (self.global_best_location - self.population)\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        # Udpdate the population\n",
     "        population = self.population + velocity\n",
     "        self.population = clamp(population, self.lb, self.ub)\n",
     "        self.velocity = clamp(velocity, self.lb, self.ub)\n",
-    "        \n",
+    "\n",
     "    def _min_by(self, values: List[torch.Tensor],keys: List[torch.Tensor],):\n",
     "        # Find the value with the minimum key\n",
     "        values = torch.cat(values, dim=0)\n",
@@ -120,14 +135,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "\n",
-    "from evox.core import Problem\n",
-    "\n",
     "class Sphere(Problem):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
@@ -147,15 +158,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from evox.workflows import EvalMonitor\n",
-    "\n",
     "algorithm = PSO(\n",
-    "    pop_size=100, \n",
-    "    lb=torch.tensor([-10.0]), \n",
+    "    pop_size=100,\n",
+    "    lb=torch.tensor([-10.0]),\n",
     "    ub=torch.tensor([10.0]),\n",
     "    w=0.6,\n",
     "    phi_p=2.5,\n",
@@ -174,27 +183,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([2.5213e-08])"
+       "tensor([1.6247e-08])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from evox.workflows import StdWorkflow\n",
-    "\n",
     "workflow = StdWorkflow()\n",
     "workflow.setup(\n",
-    "    algorithm=algorithm, \n",
-    "    problem=problem, \n",
+    "    algorithm=algorithm,\n",
+    "    problem=problem,\n",
     "    monitor=monitor\n",
     "    )\n",
     "\n",
@@ -205,8 +212,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "evoxtorch",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
