Add Quick Start of the User Guide.

--- a/docs/source/example/custom_algo_prob.ipynb
+++ b/docs/source/example/custom_algo_prob.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "# Custom algorithm and problem\n",
-    "In this notebook, we will show how to use the Algorithm and Problem classes to create a custom algorithm and problem. Here we give an example of **implementing a PSO algorithm that solves the Sphere problem**.\n",
+    "In this notebook, we will show how to use the Algorithm and Problem classes to create a custom algorithm and problem. Here we will give an example of **implementing a PSO algorithm that solves the Sphere problem**.\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,16 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([1.6247e-08])"
+       "tensor([7.4438e-09])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
