--- a/docs/source/guide/user/1-start.ipynb
+++ b/docs/source/guide/user/1-start.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# the dependent packages or functions in this example\n",
     "from typing import List\n",
+    "import time\n",
     "\n",
     "import torch\n",
     "\n",
@@ -46,28 +47,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create an algorithm and a problem\n",
+    "## The basic running process in EvoX\n",
+    "\n",
+    "As a distributed GPU-accelerated framework for scalable evolutionary computation, EvoX can be uesd to do many kinds computations, so we say \"EvoX is all you need\". Though many kinds of computaions are different more or less, in EvoX we standard the basic running process:\n",
+    "\n",
+    "<div align='center'>\n",
+    "    <b>Initiate an algorithm and a problem -- Set an monitor -- Initiate a workflow -- Run the workflow</b>\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "## Initiate an algorithm and a problem\n",
     "\n",
     "EvoX offers a comprehensive suite of 50+ Evolutionary Algorithms (EAs) and a wide range of 100+ Benchmark Problems/Environments, all benefiting from distributed GPU-acceleration. \n",
     "\n",
-    "Here we will create a PSO algorithm and an Ackley function.\n",
+    "For more details, please refer to our API documentation. [List of Algorithms](https://evox.readthedocs.io/en/latest/api/algorithms/index.html) and [List of Problems](https://evox.readthedocs.io/en/latest/api/problems/index.html).\n",
     "\n",
-    "For more detailed list, please refer to our API documentation. [List of Algorithms](https://evox.readthedocs.io/en/latest/api/algorithms/index.html) and [List of Problems](https://evox.readthedocs.io/en/latest/api/problems/index.html)."
+    "Here we will create a PSO algorithm and an Ackley function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initiate a problem\n",
     "class Sphere(Problem):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "\n",
     "    def evaluate(self, pop: torch.Tensor):\n",
     "        return (pop**2).sum(-1)\n",
-    "    \n",
+    "\n",
+    "# Initiate an algorithm\n",
     "algorithm = PSO(\n",
     "    pop_size=100,\n",
     "    lb=torch.tensor([-10.0]),\n",
@@ -76,6 +88,8 @@
     "    phi_p=2.5,\n",
     "    phi_g=0.8,\n",
     "    )\n",
+    "\n",
+    "# Initiate a problem\n",
     "problem = Sphere()"
    ]
   },
@@ -83,66 +97,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create an workflow\n",
+    "Notice that the algorithm and problem themselves do not contain the monitoring of the steps, so we will not get any feed back only denpending on them. It turns out that we still need a **monitor**.\n",
     "\n",
-    "Now we want to run the algorithm and solve the problem.\n",
+    "## Set an monitor\n",
     "\n",
-    "To accomplish this, we need to create a \"**workflow**\" of the `Workflow` class.\n",
+    "``Monitor`` is a standard class in EvoX to monitor the intermediate values inside a optimization process. Information like fitness or population can be easily obtained by the monitor.\n",
     "\n",
-    "A workflow outlines the series of steps required to accomplish a task or project. In EvoX, a workflow represents the overall process of evolutionary computation. "
+    "Doing is better than saying, so let us create a “Evalution monitor”:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "workflow = StdWorkflow()\n",
-    "workflow.setup(\n",
-    "    algorithm=algorithm,\n",
-    "    problem=problem,\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Since we adopt the functional programming paradigm. We must explicitly initialize and use the state of a module."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for _ in range(100):\n",
-    "    workflow.step()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Notice that we are passing state as an argument of step and it returns a new state. This is exactly how the stateful computation works in functional programming.\n",
-    "\n",
-    "And you may also notice that the step doesn’t give any feedback, like the result of the optimization. This is because we are missing another component in our workflow. Introducing monitor.\n",
-    "\n",
-    "## Set an Monitor\n",
-    "\n",
-    "Monitor is a standard class in EvoX to monitor the intermediate values inside a optimization process. Information like fitness or population can be easily obtained by the monitor.\n",
-    "\n",
-    "Now, create a “Evalution monitor”:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Set an monitor\n",
     "monitor = EvalMonitor()"
    ]
   },
@@ -150,15 +120,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The monitor can be plugged into the workflow."
+    "## Initiate an workflow\n",
+    "\n",
+    "A **workflow** outlines the series of steps required to accomplish a task or project. In EvoX, a workflow represents the overall process of evolutionary computation, putting the algorithm, problem, monitor together.\n",
+    "\n",
+    "If we want to run the algorithm to solve the problem with a monitor, we need to create a workflow of the `Workflow` class."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initiate an workflow\n",
+    "workflow = StdWorkflow()\n",
     "workflow.setup(\n",
     "    algorithm=algorithm,\n",
     "    problem=problem,\n",
@@ -170,35 +146,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, re-initialize the workflow, and executed it again."
+    "## Run the workflow\n",
+    "\n",
+    "Now, we can run the workflow:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.0008])\n",
-      "tensor([0.0008])\n",
-      "tensor([0.0008])\n",
-      "tensor([0.0005])\n",
-      "tensor([0.0005])\n",
-      "tensor([0.0005])\n",
-      "tensor([2.3342e-05])\n",
-      "tensor([2.3342e-05])\n",
-      "tensor([1.6017e-05])\n",
-      "tensor([1.3345e-05])\n"
+      "The top fitness is tensor([3.4406e-06]) in 0.1155 seconds at the 10th generation.\n",
+      "The top fitness is tensor([2.7953e-08]) in 0.1195 seconds at the 20th generation.\n",
+      "The top fitness is tensor([2.7953e-08]) in 0.1215 seconds at the 30th generation.\n",
+      "The top fitness is tensor([2.7953e-08]) in 0.1235 seconds at the 40th generation.\n",
+      "The top fitness is tensor([2.7953e-08]) in 0.1255 seconds at the 50th generation.\n",
+      "The top fitness is tensor([2.2696e-10]) in 0.1265 seconds at the 60th generation.\n",
+      "The top fitness is tensor([1.7826e-10]) in 0.1285 seconds at the 70th generation.\n",
+      "The top fitness is tensor([1.7826e-10]) in 0.1305 seconds at the 80th generation.\n",
+      "The top fitness is tensor([1.7826e-10]) in 0.1325 seconds at the 90th generation.\n",
+      "The top fitness is tensor([1.7826e-10]) in 0.1345 seconds at the 100th generation.\n"
      ]
     }
    ],
    "source": [
-    "for _ in range(10):\n",
+    "start = time.time()\n",
+    "\n",
+    "# Run the workflow\n",
+    "for i in range(1,101):\n",
     "    workflow.step()\n",
-    "    print(workflow.get_submodule(\"monitor\").topk_fitness.float())"
+    "    if i % 10 == 0:\n",
+    "        run_time = time.time() - start\n",
+    "        top_fitness = workflow.get_submodule(\"monitor\").topk_fitness\n",
+    "        print(f\"The top fitness is {top_fitness} in {run_time:.4f} seconds at the {i}th generation.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Congretulations if you can reproduce the Quick Start demo! Hope you enjoy the EvoX!"
    ]
   }
  ],
