debug 2 ruff problem,add hpo in index.md

--- a/docs/source/guide/developer/hpo.ipynb
+++ b/docs/source/guide/developer/hpo.ipynb
@@ -139,11 +139,11 @@
    "source": [
     "import torch\n",
     "\n",
-    "from evox.utils import TracingCond\n",
-    "from evox.core import Algorithm, Parameter, Problem, jit_class, trace_impl, Mutable\n",
-    "from evox.problems.hpo_wrapper import HPOFitnessMonitor, HPOProblemWrapper\n",
     "from evox.algorithms.pso_variants.pso import PSO\n",
-    "from evox.workflows import StdWorkflow,EvalMonitor"
+    "from evox.core import Algorithm, Mutable, Parameter, Problem, jit_class, trace_impl\n",
+    "from evox.problems.hpo_wrapper import HPOFitnessMonitor, HPOProblemWrapper\n",
+    "from evox.utils import TracingCond\n",
+    "from evox.workflows import EvalMonitor, StdWorkflow"
    ]
   },
   {
@@ -197,7 +197,7 @@
     "\n",
     "    def strategy_1(self,pop): # one update strategy\n",
     "        pop = pop * (self.hp[0]+self.hp[1])\n",
-    "        \n",
+    "\n",
     "    def strategy_2(self,pop): #  the other update strategy\n",
     "        pop = pop * (self.hp[2]+self.hp[3])\n",
     "\n",
@@ -351,6 +351,8 @@
     "class solution_transform(torch.nn.Module):\n",
     "    def forward(self, x: torch.Tensor):\n",
     "        return {\"self.algorithm.hp\": x}\n",
+    "\n",
+    "\n",
     "outer_algo = PSO(7, -3 * torch.ones(4), 3 * torch.ones(4))\n",
     "monitor = EvalMonitor(full_sol_history=False)\n",
     "outer_workflow = StdWorkflow()\n",
