Add basic problems and the modify Quick Start.

--- a/docs/source/guide/user/1-start.ipynb
+++ b/docs/source/guide/user/1-start.ipynb
@@ -38,7 +38,7 @@
     "import torch\n",
     "\n",
     "from evox.algorithms import PSO\n",
-    "# from evox.problems import Ackley\n",
+    "from evox.problems.so import Ackley\n",
     "from evox.workflows import EvalMonitor, StdWorkflow\n",
     "from evox.core import Problem"
    ]
@@ -71,14 +71,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initiate a problem\n",
-    "class Sphere(Problem):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "\n",
-    "    def evaluate(self, pop: torch.Tensor):\n",
-    "        return (pop**2).sum(-1)\n",
-    "\n",
     "# Initiate an algorithm\n",
     "algorithm = PSO(\n",
     "    pop_size=100,\n",
@@ -90,7 +82,7 @@
     "    )\n",
     "\n",
     "# Initiate a problem\n",
-    "problem = Sphere()"
+    "problem = Ackley()"
    ]
   },
   {
@@ -160,16 +152,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The top fitness is tensor([3.4406e-06]) in 0.1155 seconds at the 10th generation.\n",
-      "The top fitness is tensor([2.7953e-08]) in 0.1195 seconds at the 20th generation.\n",
-      "The top fitness is tensor([2.7953e-08]) in 0.1215 seconds at the 30th generation.\n",
-      "The top fitness is tensor([2.7953e-08]) in 0.1235 seconds at the 40th generation.\n",
-      "The top fitness is tensor([2.7953e-08]) in 0.1255 seconds at the 50th generation.\n",
-      "The top fitness is tensor([2.2696e-10]) in 0.1265 seconds at the 60th generation.\n",
-      "The top fitness is tensor([1.7826e-10]) in 0.1285 seconds at the 70th generation.\n",
-      "The top fitness is tensor([1.7826e-10]) in 0.1305 seconds at the 80th generation.\n",
-      "The top fitness is tensor([1.7826e-10]) in 0.1325 seconds at the 90th generation.\n",
-      "The top fitness is tensor([1.7826e-10]) in 0.1345 seconds at the 100th generation.\n"
+      "The top fitness is tensor([0.0631]) in 0.1246 seconds at the 10th generation.\n",
+      "The top fitness is tensor([0.0158]) in 0.1291 seconds at the 20th generation.\n",
+      "The top fitness is tensor([0.0026]) in 0.1311 seconds at the 30th generation.\n",
+      "The top fitness is tensor([0.0026]) in 0.1341 seconds at the 40th generation.\n",
+      "The top fitness is tensor([0.0026]) in 0.1361 seconds at the 50th generation.\n",
+      "The top fitness is tensor([0.0026]) in 0.1390 seconds at the 60th generation.\n",
+      "The top fitness is tensor([0.0026]) in 0.1421 seconds at the 70th generation.\n",
+      "The top fitness is tensor([0.0026]) in 0.1441 seconds at the 80th generation.\n",
+      "The top fitness is tensor([0.0026]) in 0.1471 seconds at the 90th generation.\n",
+      "The top fitness is tensor([0.0012]) in 0.1491 seconds at the 100th generation.\n"
      ]
     }
    ],
