Fix the Quick Start by ruff.

--- a/docs/source/guide/user/1-start.ipynb
+++ b/docs/source/guide/user/1-start.ipynb
@@ -21,8 +21,7 @@
     "try:\n",
     "    import evox\n",
     "except ImportError:\n",
-    "    !pip install --disable-pip-version-check --upgrade -q evox\n",
-    "    import evox"
+    "    !pip install --disable-pip-version-check --upgrade -q evox"
    ]
   },
   {
@@ -32,15 +31,13 @@
    "outputs": [],
    "source": [
     "# the dependent packages or functions in this example\n",
-    "from typing import List\n",
     "import time\n",
     "\n",
     "import torch\n",
     "\n",
     "from evox.algorithms import PSO\n",
     "from evox.problems.so import Ackley\n",
-    "from evox.workflows import EvalMonitor, StdWorkflow\n",
-    "from evox.core import Problem"
+    "from evox.workflows import EvalMonitor, StdWorkflow"
    ]
   },
   {
