Modify the Quick Start.

--- a/docs/source/guide/user/1-start.ipynb
+++ b/docs/source/guide/user/1-start.ipynb
@@ -32,15 +32,13 @@
    "outputs": [],
    "source": [
     "# the dependent packages or functions in this example\n",
-    "from typing import List\n",
     "import time\n",
     "\n",
     "import torch\n",
     "\n",
     "from evox.algorithms import PSO\n",
     "from evox.problems.so import Ackley\n",
-    "from evox.workflows import EvalMonitor, StdWorkflow\n",
-    "from evox.core import Problem"
+    "from evox.workflows import EvalMonitor, StdWorkflow"
    ]
   },
   {
