Use ruff to check 4 docs.

--- a/docs/source/guide/user/1-start.ipynb
+++ b/docs/source/guide/user/1-start.ipynb
@@ -21,79 +21,7 @@
     "try:\n",
     "    import evox\n",
     "except ImportError:\n",
-    "    !pip install --disable-pip-version-check --upgrade -q evox\n",
-    "    import evox"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# the dependent packages or functions in this example\n",
-    "import time\n",
-    "\n",
-    "import torch\n",
-    "\n",
-    "from evox.algorithms import PSO\n",
-    "from evox.problems.so import Ackley\n",
-    "from evox.workflows import EvalMonitor, StdWorkflow"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## The basic running process in EvoX\n",
-    "\n",
-    "As a distributed GPU-accelerated framework for scalable evolutionary computation, EvoX can be uesd to do many kinds computations, so we say \"EvoX is all you need\". Though many kinds of computaions are different more or less, in EvoX we standard the basic running process:\n",
-    "\n",
-    "<div align='center'>\n",
-    "    <b>Initiate an algorithm and a problem -- Set an monitor -- Initiate a workflow -- Run the workflow</b>\n",
-    "</div>\n",
-    "\n",
-    "\n",
-    "## Initiate an algorithm and a problem\n",
-    "\n",
-    "EvoX offers a comprehensive suite of 50+ Evolutionary Algorithms (EAs) and a wide range of 100+ Benchmark Problems/Environments, all benefiting from distributed GPU-acceleration. \n",
-    "\n",
-    "For more details, please refer to our API documentation. [List of Algorithms](https://evox.readthedocs.io/en/latest/api/algorithms/index.html) and [List of Problems](https://evox.readthedocs.io/en/latest/api/problems/index.html).\n",
-    "\n",
-    "Here we will create a PSO algorithm and an Ackley function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initiate an algorithm\n",
-    "algorithm = PSO(\n",
-    "    pop_size=100,\n",
-    "    lb=torch.tensor([-10.0]),\n",
-    "    ub=torch.tensor([10.0]),\n",
-    "    w=0.6,\n",
-    "    phi_p=2.5,\n",
-    "    phi_g=0.8,\n",
-    "    )\n",
-    "\n",
-    "# Initiate a problem\n",
-    "problem = Ackley()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Notice that the algorithm and problem themselves do not contain the monitoring of the steps, so we will not get any feed back only denpending on them. It turns out that we still need a **monitor**.\n",
-    "\n",
-    "## Set an monitor\n",
-    "\n",
-    "``Monitor`` is a standard class in EvoX to monitor the intermediate values inside a optimization process. Information like fitness or population can be easily obtained by the monitor.\n",
-    "\n",
-    "Doing is better than saying, so let us create a “Evalution monitor”:"
+    "    !pip install --disable-pip-version-check --upgrade -q evox"
    ]
   },
   {
