Modify HPO and images

--- a/docs/source/guide/developer/hpo.ipynb
+++ b/docs/source/guide/developer/hpo.ipynb
@@ -20,8 +20,9 @@
     "## Transforming Workflow into Problem\n",
     "\n",
     "```{image} /_static/HPO_structure.svg\n",
-    ":alt: hierarchical state\n",
-    ":width: 400px\n",
+    ":alt: HPO structure\n",
+    ":width: 700px\n",
+    ":align: center\n",
     "```\n",
     "\n",
     "The key to deploy HPO with Evox is to transform the `workflow` into a `problem` with the `HPOProblemWrapper`. After that, we can treat the `workflow` as a common `problem` which has no difference with other problems. The input of the 'HPO problem' is the hyperparameters and the output is the metric.\n",
