Modify the quote format.

--- a/docs/source/guide/developer/hpo.ipynb
+++ b/docs/source/guide/developer/hpo.ipynb
@@ -10,7 +10,7 @@
     " \n",
     " HPO is an essential step in many machine learning tasks, yet it often goes underappreciated. This is mainly due to its heavy computational demands, which can sometimes require days of processing, as well as the difficulties involved in deployment.\n",
     " \n",
-    " In EvoX, we can easily deploy HPO using the {class}`HPOProblemWrapper <evox.problems.hpo_wrapper.HPOProblemWrapper>`, and achieve efficient computation by leveraging the `vmap` method and GPU."
+    " In EvoX, we can easily deploy HPO using the {doc}`HPOProblemWrapper <apidocs/evox/evox.problems.hpo_wrapper.HPOProblemWrapper>`, and achieve efficient computation by leveraging the `vmap` method and GPU."
    ]
   },
   {
@@ -25,10 +25,10 @@
     ":align: center\n",
     "```\n",
     "\n",
-    "The key to deploy HPO with EvoX is to transform the {class}`workflows <evox.workflows>` into {class}`problems <evox.problems>` with the {class}`HPOProblemWrapper <evox.problems.hpo_wrapper.HPOProblemWrapper>`. After that, we can treat {class}`workflows <evox.workflows>` as common {class}`problems <evox.problems>`. The input of the 'HPO problem' are the hyperparameters and the output is the metric.\n",
+    "The key to deploy HPO with EvoX is to transform the {doc}`workflows <apidocs/evox/evox.workflows>` into {doc}`problems <apidocs/evox/evox.problems>` with the {doc}`HPOProblemWrapper <apidocs/evox/evox.problems.hpo_wrapper.HPOProblemWrapper>`. After that, we can treat {doc}`workflows <apidocs/evox/evox.workflows>` as common {doc}`problems <apidocs/evox/evox.problems>`. The input of the 'HPO problem' are the hyperparameters and the output is the metric.\n",
     "\n",
-    "### The Key Component -- {class}`HPOProblemWrapper <evox.problems.hpo_wrapper.HPOProblemWrapper>`\n",
-    "To enable {class}`HPOProblemWrapper <evox.problems.hpo_wrapper.HPOProblemWrapper>` to recognize the hyperparameters, we need to wrap the hyperparameters with {class}`Parameter <evox.core.module.Parameter>`. After this simple operation, the hyperparameters will be automatically recognized.\n",
+    "### The Key Component -- {doc}`HPOProblemWrapper <apidocs/evox/evox.problems.hpo_wrapper.HPOProblemWrapper>`\n",
+    "To enable {doc}`HPOProblemWrapper <apidocs/evox/evox.problems.hpo_wrapper.HPOProblemWrapper>` to recognize the hyperparameters, we need to wrap the hyperparameters with {doc}`Parameter <apidocs/evox/evox.core.module.Parameter>`. After this simple operation, the hyperparameters will be automatically recognized.\n",
     "\n",
     "```python\n",
     "class ExampleAlgorithm(Algorithm):\n",
@@ -100,7 +100,7 @@
     "        pass\n",
     "```\n",
     "\n",
-    "In EvoX, we can easily make the algorithm parallelizable by the {class}`@trace_impl <evox.core.module.trace_impl>` decorator. \n",
+    "In EvoX, we can easily make the algorithm parallelizable by the {doc}`@trace_impl <apidocs/evox/evox.core.module.trace_impl>` decorator. \n",
     "\n",
     "The parameter of this decorator is a non-parallelizable function, and the decorated function is a rewrite of the original function. \n",
     "\n",
@@ -113,11 +113,11 @@
    "source": [
     "## Utilizing the HPOMonitor\n",
     "\n",
-    "We should use {class}`HPOMonitor <evox.problems.hpo_wrapper.HPOMonitor>` in the HPO task to monitor the metric of each inner algorithm. The {class}`HPOMonitor <evox.problems.hpo_wrapper.HPOMonitor>` only add one `tell_fitness` method comparing with the common {class}`monitor <evox.core.components.Monitor>`. This is designed to make the evaluation metrics for a set of hyperparameters more flexible, as metrics in HPO tasks are often multi-dimensional and complex.\n",
+    "We should use {doc}`HPOMonitor <apidocs/evox/evox.problems.hpo_wrapper.HPOMonitor>` in the HPO task to monitor the metric of each inner algorithm. The {doc}`HPOMonitor <apidocs/evox/evox.problems.hpo_wrapper.HPOMonitor>` only add one `tell_fitness` method comparing with the common {doc}`monitor <apidocs/evox/evox.core.components.Monitor>`. This is designed to make the evaluation metrics for a set of hyperparameters more flexible, as metrics in HPO tasks are often multi-dimensional and complex.\n",
     "\n",
-    "Users only need to create a subclass of {class}`HPOMonitor <evox.problems.hpo_wrapper.HPOMonitor>` and override the `tell_fitness` method to define their own evaluation metrics.\n",
+    "Users only need to create a subclass of {doc}`HPOMonitor <apidocs/evox/evox.problems.hpo_wrapper.HPOMonitor>` and override the `tell_fitness` method to define their own evaluation metrics.\n",
     "\n",
-    "We also provide a simple {class}`HPOFitnessMonitor <evox.problems.hpo_wrapper.HPOFitnessMonitor>`, which supports calculating 'IGD' and 'HV' metrics for multi-objective problems and minimum value for single-objective problems."
+    "We also provide a simple {doc}`HPOFitnessMonitor <apidocs/evox/evox.problems.hpo_wrapper.HPOFitnessMonitor>`, which supports calculating 'IGD' and 'HV' metrics for multi-objective problems and minimum value for single-objective problems."
    ]
   },
   {
@@ -126,7 +126,7 @@
    "source": [
     "## A simple example\n",
     "\n",
-    "Here we would show you a simple example of how to use HPO with EvoX. We will use the {class}`PSO <evox.algorithms.pso_variants.pso.PSO>` algorithm to search for the best hyperparameters of a simple algorithm to solve the sphere problem.\n",
+    "Here we would show you a simple example of how to use HPO with EvoX. We will use the {doc}`PSO <apidocs/evox/evox.algorithms.pso_variants.pso.PSO>` algorithm to search for the best hyperparameters of a simple algorithm to solve the sphere problem.\n",
     "\n",
     "First, we need to import the necessary modules."
    ]
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we define an simple sphere problem. Note that this has no difference from the common {class}`problems <evox.problems>`."
+    "Next, we define an simple sphere problem. Note that this has no difference from the common {doc}`problems <apidocs/evox/evox.problems>`."
    ]
   },
   {
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then we can define the algorithm. The oringinal `step` function is non-parallelizable. We rewrite it with the decorator {class}`@trace_impl <evox.core.module.trace_impl>` to be parallelizable. We modify the in-place opeartions and python control flow."
+    "Then we can define the algorithm. The oringinal `step` function is non-parallelizable. We rewrite it with the decorator {doc}`@trace_impl <apidocs/evox/evox.core.module.trace_impl>` to be parallelizable. We modify the in-place opeartions and python control flow."
    ]
   },
   {
@@ -229,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we can use the {class}`stdworkflow <evox.workflows.std_workflow>` to wrap the problem, algorithm and monitor. Then we use the {class}`HPOProblemWrapper <evox.problems.hpo_wrapper.HPOProblemWrapper>` to transform the {class}`stdworkflow <evox.workflows.std_workflow>` to an HPO problem."
+    "Next, we can use the {doc}`stdworkflow <apidocs/evox/evox.workflows.std_workflow>` to wrap the problem, algorithm and monitor. Then we use the {doc}`HPOProblemWrapper <apidocs/evox/evox.problems.hpo_wrapper.HPOProblemWrapper>` to transform the {doc}`stdworkflow <apidocs/evox/evox.workflows.std_workflow>` to an HPO problem."
    ]
   },
   {
@@ -253,13 +253,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The {class}`HPOProblemWrapper <evox.problems.hpo_wrapper.HPOProblemWrapper>` takes 4 arguments:\n",
+    "The {doc}`HPOProblemWrapper <apidocs/evox/evox.problems.hpo_wrapper.HPOProblemWrapper>` takes 4 arguments:\n",
     "1. iterations: The number of iterations to be executed in the optimization process.\n",
     "2. num_instances: The number of instances to be executed in parallel in the optimization process.\n",
-    "3. workflow: The workflow to be used in the optimization process. Must be wrapped by {class}`jit_class <evox.core.module.jit_class>`.\n",
+    "3. workflow: The workflow to be used in the optimization process. Must be wrapped by {doc}`jit_class <apidocs/evox/evox.core.module.jit_class>`.\n",
     "4. copy_init_state: Whether to copy the initial state of the workflow for each evaluation. Defaults to `True`. If your workflow contains operations that IN-PLACE modify the tensor(s) in initial state, this should be set to `True`. Otherwise, you can set it to `False` to save memory.\n",
     "\n",
-    "We can test whether the {class}`HPOProblemWrapper <evox.problems.hpo_wrapper.HPOProblemWrapper>` recognizes the hyperparameters we define. Since we make no modification to the hyperparameters for the 7 instances, the hyperparameters should be the same for all instances."
+    "We can test whether the {doc}`HPOProblemWrapper <apidocs/evox/evox.problems.hpo_wrapper.HPOProblemWrapper>` recognizes the hyperparameters we define. Since we make no modification to the hyperparameters for the 7 instances, the hyperparameters should be the same for all instances."
    ]
   },
   {
@@ -292,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also specify a set of hyperparameter values ourselves. Note that the number of hyperparameter sets must be consistent with the number of instances in the {class}`HPOProblemWrapper <evox.problems.hpo_wrapper.HPOProblemWrapper>` and the custom hyperparameters must be passed in the form of a dictionary and wrapped using the {class}`Parameter <evox.core.module.Parameter>`."
+    "We can also specify a set of hyperparameter values ourselves. Note that the number of hyperparameter sets must be consistent with the number of instances in the {doc}`HPOProblemWrapper <apidocs/evox/evox.problems.hpo_wrapper.HPOProblemWrapper>` and the custom hyperparameters must be passed in the form of a dictionary and wrapped using the {doc}`Parameter <apidocs/evox/evox.core.module.Parameter>`."
    ]
   },
   {
@@ -333,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we use the {class}`PSO <evox.algorithms.pso_variants.pso.PSO>` algorithm to optimize the hyperparameters of ExampleAlgorithm. Note that the population size of the {class}`PSO <evox.algorithms.pso_variants.pso.PSO>` should match the number of instances; otherwise, unexpected errors may occur. Here, we need to transform the solution in the outer workflow, as the {class}`HPOProblemWrapper <evox.problems.hpo_wrapper.HPOProblemWrapper>` must accept a dictionary as input."
+    "Now, we use the {doc}`PSO <apidocs/evox/evox.algorithms.pso_variants.pso.PSO>` algorithm to optimize the hyperparameters of ExampleAlgorithm. Note that the population size of the {doc}`PSO <apidocs/evox/evox.algorithms.pso_variants.pso.PSO>` should match the number of instances; otherwise, unexpected errors may occur. Here, we need to transform the solution in the outer workflow, as the {doc}`HPOProblemWrapper <apidocs/evox/evox.problems.hpo_wrapper.HPOProblemWrapper>` must accept a dictionary as input."
    ]
   },
   {
