delete useless code and add menu

--- a/docs/source/example/moalg.ipynb
+++ b/docs/source/example/moalg.ipynb
@@ -45,12 +45,7 @@
     "from evox.core import jit, use_state\n",
     "from evox.metrics import igd\n",
     "from evox.problems.numerical import DTLZ2\n",
-    "from evox.workflows import StdWorkflow\n",
-    "\n",
-    "#Solve the possible path dependency issues.\n",
-    "current_directory = os.getcwd()\n",
-    "if current_directory not in sys.path:\n",
-    "    sys.path.append(current_directory)"
+    "from evox.workflows import StdWorkflow"
    ]
   },
   {
