Add "..." to ExampleAlgorithm

--- a/docs/source/guide/developer/hpo.ipynb
+++ b/docs/source/guide/developer/hpo.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "```python\n",
     "class ExampleAlgorithm(Algorithm):\n",
-    "    def __init__(self,): \n",
+    "    def __init__(self,...): \n",
     "        self.pop = rand(10,10) #attribute of the algotirhm itself\n",
     "        pass\n",
     "\n",
