Modify the index of docs.

--- a/docs/source/example/moalg.ipynb
+++ b/docs/source/example/moalg.ipynb
@@ -24,8 +24,7 @@
     "try:\n",
     "    import evox\n",
     "except ImportError:\n",
-    "    !pip install --disable-pip-version-check --upgrade -q evox\n",
-    "    import evox"
+    "    !pip install --disable-pip-version-check --upgrade -q evox"
    ]
   },
   {
@@ -34,8 +33,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import sys\n",
     "import time\n",
     "\n",
     "import torch\n",
